--- a/consulting-site/main.css
+++ b/consulting-site/main.css
@@ -137,6 +137,10 @@ fieldset {
     min-height: 12em;
 }
 
+.filedset2 {
+    min-height: 55em;
+}
+
 .q1 { 
     color: rgb(0, 14, 95); 
     letter-spacing:0.5px;
@@ -179,7 +183,7 @@ legend {
     font-size: 1.1em;
     font-weight: 100;
     text-align: left;
-    padding-left: 2.8em;
+    padding-left: 0.8em;
     padding-top: 0.3em;
 }
 
@@ -189,7 +193,48 @@ legend {
     padding-top: 0.4em;
     padding-bottom: 0.4em;
 }
+.options option {
+    font-size: 18px;
+    background-color: #ffffff;
+    overflow: auto;
+    width: 8em;
+}
+  
+.options option:before {
+    content: ">";
+    font-size: 20px;
+    display: none;
+    padding-right: 10px;
+    padding-left: 5px;
+    color: rgb(0, 14, 95);
+}
+  
+.options option:hover:before {
+    display: inline;
+}
 
-.group #days{
+button {
+    font-size: 1.1em;
     text-align: center;
+    width: 200px;
+    border-radius: 8px 8px 8px 8px;
+    border: none;
+    background-color: rgb(0, 14, 95);
+    color: #fff;
+    text-shadow: 0 0 10px rgba(0,0,0,0.3);
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    margin-bottom: 30px;
+}
+
+button:hover {
+    transition-duration: 0.2s;
+    background-color: green;
+    box-shadow: 3px 3px 3px 3px rgba(0, 14, 95, 0.2);
+}
+
+button:active {
+    background-color: green;
+    box-shadow: 0 5px rgb(0, 14, 95);
+    transform: translateY(4px);
 }
