--- a/consulting-site/main.css
+++ b/consulting-site/main.css
@@ -13,6 +13,15 @@ body {
     min-height: 100vh;
 }
 
+h1 {
+    text-align: center;
+    text-transform: capitalize;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(0, 14, 95);
+    text-shadow: 0 0 10px rgba(0,0,0,0.2);
+    font-size: bolder;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -60,6 +69,32 @@ body {
     color: #fff;
     cursor: pointer;
     display: none;
+}
+
+.about-us {
+    align-items: center;
+    margin-top: 10em;
+    margin-bottom: 30px;
+    padding-top: 2em;
+    padding-left: 20px;
+    padding-bottom: 2em;
+    font-size: 18px;
+    width: 70%;
+}
+
+.about-us li {
+    font-weight: bold;
+    margin-bottom: 8px;
+    
+}
+
+.about-us img {
+    width: 350px;
+    height: 350px;
+    float: left;
+    border: 3px solid rgb(0, 14, 95);
+    margin-right: 30px;
+
 }
 
 @media (max-width:1407px) {
@@ -121,6 +156,10 @@ body {
         transition-delay: calc(.15s *var(--i));
     }
 
+    .about-us {
+        width: 95%;
+    }
+
 }
 
 .form {
@@ -153,6 +192,7 @@ fieldset {
 legend {
     font-weight: bolder;
     font-size: x-large;
+    text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(0, 14, 95);
     text-shadow: 0 0 10px rgba(0,0,0,0.3);
@@ -238,3 +278,5 @@ button:active {
     box-shadow: 0 5px rgb(0, 14, 95);
     transform: translateY(4px);
 }
+
+
